[package]
name = "PortPulse"
version = "0.2.0"
authors = ["akhil madipalli <akhimadi@gmail.com>"]
edition = "2021"
description = "A TCP port scanner CLI"
readme = "README.md"
homepage = "https://github.com/akhilmadipalli/PortPulse"
repository = "https://github.com/akhilmadipalli/PortPulse"
keywords = ["cli", "port", "ip", "scanner"]
categories = ["command-line-utilities"]
license = "MIT"
[dependencies]
